--- a/src/globals.css
+++ b/src/globals.css
@@ -191,6 +191,10 @@
     @apply z-50 flex-between w-full sticky bottom-0 rounded-t-[20px] bg-dark-2 px-5 py-4 md:hidden;
   }
 
+  .bottombar-link {
+    @apply flex-center flex-col gap-1 p-2 transition;
+  }
+
   /* File uploader */
   .file_uploader-img {
     @apply h-80 lg:h-[480px] w-full rounded-[24px] object-cover object-top;
